gccida/g0/independent_decode_option
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/independent_decode_option/src/toplev.c:4614:13: error: expected identifier or '('
 struct arg = *argv; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/independent_decode_option/src/toplev.c:4617:9: error: expected expression
arga =  struct arg + 1; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/independent_decode_option/src/toplev.c:4630:25: error: use of undeclared identifier 'sep'
print_version( stderr, &sep); 
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/independent_decode_option/src/obj/toplev.o] Error 1
